<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ubru.sabaipon.teerawat.apichat.herbbanban.MainActivity"
    android:background="@drawable/bbb2">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:background="#82ffffff"
        android:padding="20dp">

        <ImageView
            android:layout_width="@dimen/icom"
            android:layout_height="@dimen/icom"
            android:id="@+id/imageView"
            android:src="@drawable/icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_main"
            android:id="@+id/textView"
            android:textSize="@dimen/h1" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:hint="@string/user"
            android:inputType="text" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:hint="@string/pass"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:id="@+id/button"
            android:layout_weight="1"
            android:onClick="clickSignInMain" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:id="@+id/button2"
            android:layout_weight="1"
            android:onClick="clickSignUpMain" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/guest"
            android:id="@+id/button3"
            android:layout_weight="1"
            android:onClick="clickGuest"
            android:textSize="12dp" />
    </LinearLayout>
</RelativeLayout>