<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ubru.sabaipon.teerawat.apichat.herbbanban.UpdateHerb"
    android:background="@drawable/bbb2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/up_main"
        android:id="@+id/textView20"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/h1"
        android:textColor="#060006" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView3"
        android:layout_margin="20dp"
        android:layout_below="@+id/textView20">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:layout_width="@dimen/icom"
                    android:layout_height="@dimen/icom"
                    android:id="@+id/imageButton"
                    android:layout_gravity="center_horizontal" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:id="@+id/textView21"
                        android:textSize="@dimen/h2"
                        android:layout_weight="1"
                        android:textColor="#060006" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/editText9"
                        android:hint="@string/up_hub"
                        android:inputType="text"
                        android:textSize="@dimen/h2"
                        android:layout_weight="2" />

                </LinearLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="86dp"
                    android:id="@+id/scrollView5" >

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/up_hub1"
                            android:id="@+id/textView22"
                            android:textSize="18dp"
                            android:layout_weight="1"
                            android:textColor="#060006" />

                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/editText10"
                            android:hint="@string/up_hub11"
                            android:inputType="text"
                            android:textSize="@dimen/h2"
                            android:layout_weight="2" />
                    </LinearLayout>
                </ScrollView>

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:id="@+id/scrollView4" >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/up_hub2"
                        android:id="@+id/textView23"
                        android:textSize="@dimen/h2"
                        android:layout_weight="1"
                        android:textColor="#060006" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/editText11"
                        android:hint="@string/up_hub22"
                        android:inputType="text"
                        android:layout_weight="2"
                        android:textSize="@dimen/h2" />
                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/up_hub3"
                        android:id="@+id/textView24"
                        android:textSize="@dimen/h2"
                        android:layout_weight="1"
                        android:textColor="#060006" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/editText12"
                        android:hint="@string/up_hub33"
                        android:inputType="text"
                        android:textSize="@dimen/h2"
                        android:layout_weight="2" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/button5"
        android:layout_alignParentBottom="true"
        android:onClick="clickSignUpSign"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentLeft="false" />
</RelativeLayout>