<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ubru.sabaipon.teerawat.apichat.herbbanban.SignUpActivity"
    android:background="@drawable/wall7">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:id="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/h1" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:id="@+id/button4"
        android:layout_alignParentBottom="true"
        android:onClick="clickSignUpSign" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_below="@+id/textView2"
        android:layout_above="@+id/button4"
        android:layout_margin="20dp"
        android:background="#82ffffff"
        android:padding="15dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:id="@+id/textView3"
                    android:layout_weight="1"
                    android:textSize="@dimen/h2" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText3"
                    android:layout_weight="2"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/currency"
                    android:id="@+id/textView4"
                    android:layout_weight="1"
                    android:textSize="@dimen/h2" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText4"
                    android:layout_weight="2"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:id="@+id/textView5"
                    android:layout_weight="1"
                    android:textSize="@dimen/h2" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText5"
                    android:layout_weight="1"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:id="@+id/textView6"
                    android:layout_weight="1"
                    android:textSize="@dimen/h2" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText6"
                    android:layout_weight="2"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/user"
                    android:id="@+id/textView7"
                    android:layout_weight="1"
                    android:textSize="@dimen/h2" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText7"
                    android:layout_weight="2"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pass"
                    android:id="@+id/textView8"
                    android:layout_weight="1"
                    android:textSize="@dimen/h2" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText8"
                    android:layout_weight="2"
                    android:inputType="text" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>